add swagger definitions and update api-fetch
